[metadata]
name = wordlehelper
version = 1.1.4
author = Will Cuny
author_email = willjc02@gmail.com
description = A program to help you solve wordle games!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wcuny/wordlehelper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True